plugins {
	id "com.crystaelix.loom" version "1.9.0"
	id "eclipse"
	id "idea"
	id "maven-publish"
	id "net.kyori.blossom" version "[1,2)"
	id "me.modmuss50.mod-publish-plugin" version "0.8.4"
}

repositories {
	mavenCentral()
	flatDir {
		dirs "libs"
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.parchmentmc.net/"
			}
		}
		filter {
			includeGroup "org.parchmentmc.data"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.crystaelix.com/releases/"
			}
		}
		filter {
			includeGroup "thelm.packagedauto"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://maven.blamejared.com/"
			}
		}
		filter {
			includeGroup "mezz.jei"
			includeGroup "vazkii.patchouli"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://cursemaven.com/"
			}
		}
		filter {
			includeGroup "curse.maven"
		}
	}
	exclusiveContent {
		forRepository {
			maven {
				url = "https://modmaven.dev/"
			}
		}
		filter {
			includeGroup "appeng"
			includeGroup "mekanism"
		}
	}
}

sourceSets {
	main
}

def mcVersion = "1.18.2"
def modName = "PackagedAvaritia-Universal"
def modId = "packagedavaritia"
def specVersion = "2"
def vendor = "thelm"

group = "thelm.packagedavaritia"
version = "2.0.0.0"

archivesBaseName = "${modName}-${mcVersion}"

java {
	toolchain.languageVersion = JavaLanguageVersion.of(17)
	withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"
}

loom {
	silentMojangMappingsLicense()
	interfaceInjection.enableDependencyInterfaceInjection = false
	runs {
		configureEach {
			property "fabric.log.console.level", "debug"
		}
		client
		server
	}
}

dependencies {
	// Log4j
	implementation "org.apache.logging.log4j:log4j-core:2.24.1"

	// Minecraft
	minecraft "com.mojang:minecraft:1.18.2"
	mappings loom.layered {
		officialMojangMappings()
		parchment "org.parchmentmc.data:parchment-1.18.2:2022.11.06@zip"
	}
	forge "net.minecraftforge:forge:1.18.2-40.2.21"

	// Dependencies
	modImplementation "thelm.packagedauto:PackagedAuto-1.18.2:3.1.14.55"
	modImplementation "curse.maven:avaritia-universal-891434:5506588"
	modImplementation("mezz.jei:jei-1.18.2-forge:10.2.1.1009") {transitive = false}
	modImplementation "appeng:appliedenergistics2-forge:11.7.6"
	modImplementation "vazkii.patchouli:Patchouli:1.18.2-71.1"

	// Testing
	modImplementation "mekanism:Mekanism:1.18.2-10.2.5.465"
	modImplementation "curse.maven:applied-mekanistics-574300:3968835"

	// Performance
	modImplementation "curse.maven:yeetusexperimentus-635427:4377180"
	implementation "io.github.llamalad7:mixinextras-forge:0.3.6"
	modImplementation "curse.maven:modernfix-790626:5399365"
	modImplementation "curse.maven:ferritecore-429235:4074294"
	modImplementation "curse.maven:lazy-dfu-forge-460819:3544496"
}

def replacements = [
	"0@VERSION@": version
]

blossom {
	replaceToken(replacements)
}

processResources {
	inputs.properties(replacements)
	filesMatching(["mcmod.info", "META-INF/mods.toml", "META-INF/neoforge.mods.toml"]) {
		filter {
			it.replace(replacements)
		}
	}
}

def manifestAttributes = [
	"Specification-Title": modName,
	"Specification-Vendor": vendor,
	"Specification-Version": specVersion,
	"Implementation-Title": archivesBaseName,
	"Implementation-Version": version,
	"Implementation-Vendor": vendor
]

jar {
	manifest.attributes(manifestAttributes)
}

sourcesJar {
	manifest.attributes(manifestAttributes)
}

publishing {
	publications {
		register("mavenJava", MavenPublication) {
			artifact remapJar
			artifact sourcesJar
		}
	}
	repositories {
		if(project.hasProperty("CrystaelixMavenUsername") && project.hasProperty("CrystaelixMavenPassword")) {
			maven {
				name = "CrystaelixMaven"
				url = "https://maven.crystaelix.com/releases/"
				credentials(PasswordCredentials)
			}
		}
	}
}

publishMods {
	file = remapJar.archiveFile
	version = displayName = "${mcVersion}-Universal-${project.version}"
	changelog = file("changelog.md").text
	type = STABLE
	modLoaders.add("forge")
	additionalFiles.from(sourcesJar.archiveFile)

	curseforge {
		accessToken = providers.gradleProperty("curseforge.token")
		projectId = "308383"
		minecraftVersions.add(mcVersion)
		requires "packagedauto", "avaritia-universal"
		optional "applied-energistics-2"
	}

	modrinth {
		accessToken = providers.gradleProperty("modrinth.token")
		projectId = "aA94MQL4"
		minecraftVersions.add(mcVersion)
		requires "packagedauto"
		optional "ae2"
	}
}
